--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-minimal-pie-chart": "^9.1.0",
     "react-router-dom": "^7.6.0",
+    "react-sparklines": "^1.7.0",
     "recharts": "^2.15.3",
     "tailwindcss": "^4.1.6"
   },
@@ -29,6 +31,7 @@
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-sparklines": "^1.7.5",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
